# app/Http/Controllers/AuthController.php
@@ -38,7 +38,8 @@ class AuthController extends Controller
  *             required={"name", "email", "password"},
  *             @OA\Property(property="name", type="string", example="John Doe"),
  *             @OA\Property(property="email", type="string", example="user@example.com"),
- *             @OA\Property(property="password", type="string", format="password", example="secret")
+ *             @OA\Property(property="password", type="string", format="password", example="secret"),
+ *             @OA\Property(property="password_confirmation", type="string", format="password", example="secret")
  *         )
  *     ),
  *     @OA\Response(
